added server name and online state
