# controllers/Player.js
@@ -8,8 +8,10 @@ module.exports.createPlayer = function createPlayer (req, res, next) {
   var username = req.swagger.params['username'].value;
   var playTime = req.swagger.params['playTime'].value;
   var emeralds = req.swagger.params['emeralds'].value;
+  var serverName = req.swagger.params['serverName'].value;
+  var online = req.swagger.params['online'].value;
   var language = req.swagger.params['language'].value;
-  Player.createPlayer(uuid,username,playTime,emeralds,language)
+  Player.createPlayer(uuid,username,playTime,emeralds,serverName,online,language)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -55,8 +57,10 @@ module.exports.updatePlayer = function updatePlayer (req, res, next) {
   var username = req.swagger.params['username'].value;
   var playTime = req.swagger.params['playTime'].value;
   var emeralds = req.swagger.params['emeralds'].value;
+  var serverName = req.swagger.params['serverName'].value;
+  var online = req.swagger.params['online'].value;
   var language = req.swagger.params['language'].value;
-  Player.updatePlayer(uuid,username,playTime,emeralds,language)
+  Player.updatePlayer(uuid,username,playTime,emeralds,serverName,online,language)
     .then(function (response) {
       utils.writeJson(res, response);
     })
